Improve asserts and couple of fixes around tests
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>